force-app/main/default/objects/Journal_Entry__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The absolute value of the debit/credit amount</description>
    <inlineHelpText>The absolute value of the debit/credit amount</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>