force-app/main/default/objects/Journal_Entry__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The effective date of the journal entry</description>
    <inlineHelpText>The effective date of the journal entry</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>