force-app/main/default/objects/Journal_Entry__c/fields/Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>Posting_Status__c</fullName>
    <defaultValue>&quot;Entered&quot;</defaultValue>
    <description>The posting status to the general ledger</description>
    <inlineHelpText>The posting status to the general ledger</inlineHelpText>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entered</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>