force-app/main/default/objects/Journal_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Debit__c</columns>
    <columns>Credit__c</columns>
    <columns>GL_Code__c</columns>
    <columns>GL_Account_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Accounting_Period__c</columns>
    <columns>Posting_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>